--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,11 +12,11 @@ google-generativeai==0.3.2
 
 # File storage and media
 cloudinary==1.36.0
-Pillow==10.1.0
+Pillow>=9.1,<10.0  # Compatible with manim 0.18.0
 
 # Animation and mathematical libraries
 manim==0.18.0
-numpy==1.24.3
+numpy==1.26.4
 matplotlib==3.7.2
 
 # Security and authentication
@@ -29,25 +29,14 @@ Werkzeug==3.0.1
 
 # Validation and serialization
 marshmallow==3.20.2
-email-validator==2.1.0
 
 # HTTP requests
 requests==2.31.0
 
-# Async support
-asyncio==3.4.3
-
-# Development and testing dependencies
-pytest==7.4.3
-pytest-flask==1.3.0
-pytest-cov==4.1.0
-black==23.11.0
-flake8==6.1.0
-isort==5.12.0
-
-# Production dependencies
+# Production server
 gunicorn==21.2.0
-supervisor==4.2.5
 
-# Monitoring and logging
-structlog==23.2.0
+# Development tools (optional, comment out in production)
+# black==23.11.0
+# flake8==6.1.0
+# pytest==7.4.3
